--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
   <meta name="keywords" content="contact, web developer, collaboration, project inquiry, Dipak Sharma">
   <meta name="author" content="Dipak Sharma">
   <title>Contact - Dipak Sharma | Web Developer</title>
-  <link rel="stylesheet" href="contact.css">
+  <link rel="stylesheet" href="css/contact.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700;800&display=swap" rel="stylesheet">
@@ -166,6 +166,6 @@
     </div>
   </footer>
 
-  <script src="contact.js"></script>
+  <script src="js/contact.js"></script>
 </body>
 </html>
