--- a/index.html
+++ b/index.html
@@ -37,27 +37,22 @@
             <div class="nav-center">
                 <ul class="nav-links">
                     <li><a href="#home" class="nav-link" data-section="home">
-                        <span class="nav-icon">🏠</span>
                         <span class="nav-text">Home</span>
                         <span class="nav-indicator"></span>
                     </a></li>
                     <li><a href="#about" class="nav-link" data-section="about">
-                        <span class="nav-icon">👨‍💻</span>
                         <span class="nav-text">About</span>
                         <span class="nav-indicator"></span>
                     </a></li>
                     <li><a href="#skills" class="nav-link" data-section="skills">
-                        <span class="nav-icon">⚡</span>
                         <span class="nav-text">Skills</span>
                         <span class="nav-indicator"></span>
                     </a></li>
                     <li><a href="#projects" class="nav-link" data-section="projects">
-                        <span class="nav-icon">💼</span>
                         <span class="nav-text">Projects</span>
                         <span class="nav-indicator"></span>
                     </a></li>
                     <li><a href="#achievements" class="nav-link" data-section="achievements">
-                        <span class="nav-icon">🏆</span>
                         <span class="nav-text">Achievements</span>
                         <span class="nav-indicator"></span>
                     </a></li>
@@ -150,20 +145,20 @@
                 <h3>Frontend</h3>
                 <ul>
                     <li>HTML5 & CSS3</li>
-                    <li>JavaScript (ES6+)</li>
                     <li>React.js</li>
                     <li>Vue.js</li>
                     <li>Sass/SCSS</li>
+                    <li>Responsive Design</li>
                 </ul>
             </div>
             <div class="skill-category">
                 <h3>Backend</h3>
                 <ul>
+                    <li>JavaScript</li>
                     <li>Node.js</li>
                     <li>Express.js</li>
                     <li>Python</li>
                     <li>MongoDB</li>
-                    <li>PostgreSQL</li>
                 </ul>
             </div>
             <div class="skill-category">
@@ -187,36 +182,41 @@
             <p>Here are some of my recent works that showcase my skills and passion for development.</p>
         </div>
         <div class="card-container">
-            <article class="project-card card1">
-                <div class="project-info">
+            <article class="project-card">
+                <div class="project-content">
                     <h3>Event Planning Platform</h3>
-                    <p>Full-stack app with JWT + RBAC, REST CRUD</p>
+                    <p>A comprehensive event management platform with secure authentication, role-based access control, and complete CRUD operations.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">React</span>
                         <span class="tech-tag">Node.js</span>
-                        <span class="tech-tag">MySql</span>
+                        <span class="tech-tag">MySQL</span>
+                        <span class="tech-tag">Express</span>
                     </div>
                 </div>
             </article>
-            <article class="project-card card2">
-                <div class="project-info">
-                    <h3>Trivia Quiz App</h3>
-                    <p>Single-page app where users pick a category from the Open Trivia DB API</p>
+            
+            <article class="project-card">
+                <div class="project-content">
+                    <h3>Interactive Trivia Quiz</h3>
+                    <p>A single-page trivia application that fetches questions from the Open Trivia Database API with multiple categories and difficulty levels.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">JavaScript</span>
-                        <span class="tech-tag">API</span>
                         <span class="tech-tag">Vite</span>
+                        <span class="tech-tag">API</span>
+                        <span class="tech-tag">HTML5</span>
                     </div>
                 </div>
             </article>
-            <article class="project-card card3">
-                <div class="project-info">
-                    <h3>Student Portal</h3>
-                    <p>Built a dual-version portal to demonstrate common security flaws</p>
+            
+            <article class="project-card">
+                <div class="project-content">
+                    <h3>Secure Student Portal</h3>
+                    <p>An educational portal demonstrating web security vulnerabilities and their secure implementations, showcasing security best practices.</p>
                     <div class="tech-stack">
                         <span class="tech-tag">Node.js</span>
                         <span class="tech-tag">EJS</span>
-                        <span class="tech-tag">Sqlite</span>
+                        <span class="tech-tag">SQLite</span>
+                        <span class="tech-tag">Security</span>
                     </div>
                 </div>
             </article>
